tests/transpiler/x/cpp/sort_stable.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:15:17: error: template argument 1 is invalid
   15 | std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
      |                 ^
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:15:17: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:15:64: error: template argument 2 is invalid
   15 | std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
      |                                                                ^~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:15:67: error: template argument 1 is invalid
   15 | std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
      |                                                                   ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:15:67: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:17:9: error: ‘__tmp’ was not declared in this scope
   17 |         __tmp.emplace_back(i.n, i.v);
      |         ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:19:11: error: ‘__tmp’ was not declared in this scope
   19 | std::sort(__tmp.begin(), __tmp.end(), [](const auto& a,const auto& b){ return a.first < b.first; });
      |           ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:20:17: error: template argument 1 is invalid
   20 | std::vector<auto> __items;
      |                 ^
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:20:17: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/sort_stable.cpp:22:13: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   22 |     __items.push_back(__tmp[__i].second);
      |             ^~~~~~~~~
