tests/transpiler/x/cpp/sort_stable.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 11:05:00 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <map>
#include <algorithm>
#include <sstream>

struct ItemsItem {
    int n;
    std::string v;
};

std::vector<ItemsItem> items = std::vector{ItemsItem{.n = 1, .v = std::string("a")}, ItemsItem{.n = 1, .v = std::string("b")}, ItemsItem{.n = 2, .v = std::string("c")}};
std::vector<auto> result = ([]{ std::vector<std::pair<int, auto>> __tmp;
for (auto i : items) {
        __tmp.emplace_back(i.n, i.v);
}
std::sort(__tmp.begin(), __tmp.end(), [](const auto& a,const auto& b){ return a.first < b.first; });
std::vector<auto> __items;
for(size_t __i=0; __i<__tmp.size(); ++__i){
    __items.push_back(__tmp[__i].second);
}
return __items; }());

int main() {
    { std::ostringstream __ss; __ss << std::boolalpha; if(false) __ss << " "; __ss << result; auto __line = __ss.str(); if(!__line.empty() && __line.back() == ' ') __line.pop_back(); std::cout << __line << std::endl; }
    return 0;
}
